--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>myth.yinkn</groupId>
-	<artifactId>myBatisProj</artifactId>
+	<artifactId>springboot-mybatis-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>myBatisProj</name>
+	<name>springboot-mybatis-demo</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
