Others#, change configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-#####################################################
-######## Configuration
-#####################################################
-
-spring.datasource.initialize=false
+server.port=8085
