--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<target.version>1.8</target.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring-boot.version>1.5.3.RELEASE</spring-boot.version>
 	</properties>
