--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<version>${spring-boot.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>${spring-boot.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
     		<artifactId>spring-tx</artifactId>
     		<version>4.3.8.RELEASE</version>
