--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<target.version>1.8</target.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring-boot.version>1.5.3.RELEASE</spring-boot.version>
 	</properties>
