--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring-boot.version>1.5.3.RELEASE</spring-boot.version>
+        <docker.build.skip>true</docker.build.skip>
 	</properties>
 
 	<dependencies>
@@ -134,6 +135,33 @@
 				<configuration>
 					<repoToken>UFti7CKDOSXHNwu8rbC48Xh2xBYEduFOG</repoToken>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+                        <phase>validate</phase>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/docker/</directory>
+                                    <filtering>false</filtering>
+                                    <includes>
+                                        <include>**/Dockerfile</include>
+                                        <include>**/*.sh</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
