--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -4,7 +4,8 @@ RUN mkdir -p /opt/demo/
 WORKDIR /opt/demo/
 
 COPY ./springboot-mybatis-demo-0.0.1-SNAPSHOT.jar .
+COPY ./start.sh .
 
 EXPOSE 8088
 
-ENTRYPOINT ./
+ENTRYPOINT ./start.sh
