--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ jdk:
   - oraclejdk8
 services:
   - docker
+script:
+  - mvn package
 after_success:
   - mvn clean cobertura:cobertura coveralls:report
-  - cd target/ && docker build -t hub.tencentyun.com/kkg/springboot-mybatis-demo .
+  - cd target/
+  - ls -a
+  - docker build -t hub.tencentyun.com/kkg/springboot-mybatis-demo .
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin hub.tencentyun.com
   - docker push hub.tencentyun.com
