--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,12 @@ jdk:
   - oraclejdk8
 services:
   - docker
-install:
-  - mvn package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script: skip
 after_success:
   - mvn clean cobertura:cobertura coveralls:report
   - pwd
   - cd target/
+  - cp /home/travis/.m2/repository/myth/yinkn/springboot-mybatis-demo/0.0.1-SNAPSHOT/springboot-mybatis-demo-0.0.1-SNAPSHOT.jar .
   - ls -a
   - docker build -t hub.tencentyun.com/kkg/springboot-mybatis-demo .
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin hub.tencentyun.com
