--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ after_success:
   - cp /home/travis/.m2/repository/myth/yinkn/springboot-mybatis-demo/0.0.1-SNAPSHOT/springboot-mybatis-demo-0.0.1-SNAPSHOT.jar .
   - ls -a
   - docker build -t hub.tencentyun.com/kkg/springboot-mybatis-demo:0.0.1 .
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin hub.tencentyun.com
-  - docker push hub.tencentyun.com/kkg/springboot-mybatis-demo:0.0.1
+  - echo "$DOCKER_PASSWORD" | sudo docker login -u "$DOCKER_USERNAME" --password-stdin hub.tencentyun.com
+  - sudo docker push hub.tencentyun.com/kkg/springboot-mybatis-demo:0.0.1
