Others#, fix dockerfile.

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /opt/demo/
 
 COPY ./springboot-mybatis-demo-0.0.1-SNAPSHOT.jar .
 COPY ./start.sh .
+RUN chmod +x ./start.sh
 
 EXPOSE 8088
 
